# cppCourse

./: CMakeLists.txt
tehtavat1/: 2_1.cpp  2_3.cpp  3_3.cpp  3_4.cpp  4_1.cpp  4_2.cpp  6_3.cpp
tehtavat10/: tehtava1_10.cpp  tehtava2_10.cpp  tehtava3_10.cpp
tehtavat11/: tehtava4_11.cpp  tehtava5_11.cpp
tehtavat2/: tehtava1_02.cpp  tehtava2_02.cpp  tehtava3_02.txt  tehtava4_02.cpp  tehtava5_02.cpp  tehtava6_02.cpp
tehtavat4/: tehtava1_04.cpp  tehtava2_04.cpp  tehtava2_04_b.cpp  tehtava3_04.txt  tehtava4_04.cpp  tehtava5_04.cpp  tehtava6_04.cpp
tehtavat5/: tehtava1_05.cpp  tehtava2_05.cpp  tehtava3_05.cpp  tehtava4_05.cpp  tehtava5_05.cpp  tehtava6_05.cpp
tehtavat6/: tehtava1_06.cpp  tehtava2_06.cpp  tehtava3_06.cpp  tehtava4_06.cpp  tehtava5_06.cpp  tehtava6_06.cpp
tehtavat7/: tehtava1_07.cpp  tehtava2_07.cpp  tehtava3_07.cpp  tehtava4_07.cpp
tehtavat8/: tehtava1_08.cpp  tehtava2_08.cpp  tehtava3_08.cpp  tehtava4_08.txt  tehtava5_08.cpp  tehtava6_08.cpp
tehtavat9/: tehtava1_09.cpp  tehtava1_09.h  tehtava2_09.cpp  tehtava3_09.cpp
tunti_tehtavat2/: tunti_tehtava1_02.cpp  tunti_tehtava3_02.cpp  tunti_tehtava4_02.cpp  tunti_tehtava5_02.cpp  tunti_tehtava6_02.cpp
