cmake_minimum_required(VERSION 4.0)
project(cppCourse)

set(CMAKE_CXX_STANDARD 14)

add_executable(tehtava_1 tehtavat1/2_1.cpp)
add_executable(tehtava_2 tehtavat1/2_3.cpp)
add_executable(tehtava_3 tehtavat1/3_3.cpp)
add_executable(tehtava_4 tehtavat1/3_4.cpp)
add_executable(tehtava_5 tehtavat1/4_1.cpp)
add_executable(tehtava_6 tehtavat1/4_2.cpp)
add_executable(tehtava_7 tehtavat1/6_3.cpp)
