cmake_minimum_required(VERSION 4.0)
project(cppCourse)

set(CMAKE_CXX_STANDARD 14)

add_executable(tehtava_1 tehtavat1/2_1.cpp)
add_executable(tehtava_2 tehtavat1/2_3.cpp)
add_executable(tehtava_3 tehtavat1/3_3.cpp)
add_executable(tehtava_4 tehtavat1/3_4.cpp)
add_executable(tehtava_5 tehtavat1/4_1.cpp)
add_executable(tehtava_6 tehtavat1/4_2.cpp)
add_executable(tehtava_7 tehtavat1/6_3.cpp)
add_executable(tunti_tehtava1_02 tunti_tehtavat2/tunti_tehtava1_02.cpp)
add_executable(tunti_tehtava2_02 tunti_tehtavat2/tunti_tehtava2_02.cpp)
add_executable(tunti_tehtava3_02 tunti_tehtavat2/tunti_tehtava3_02.cpp)
add_executable(tunti_tehtava4_02 tunti_tehtavat2/tunti_tehtava4_02.cpp)
add_executable(tunti_tehtava5_02 tunti_tehtavat2/tunti_tehtava5_02.cpp)
add_executable(tunti_tehtava6_02 tunti_tehtavat2/tunti_tehtava6_02.cpp)
add_executable(tehtava1_02 tehtavat2/tehtava1_02.cpp)
add_executable(tehtava2_02 tehtavat2/tehtava2_02.cpp)
add_executable(tehtava4_02 tehtavat2/tehtava4_02.cpp)
add_executable(tehtava5_02 tehtavat2/tehtava5_02.cpp)
add_executable(tehtava6_02 tehtavat2/tehtava6_02.cpp)
