cmake_minimum_required(VERSION 4.0)
project(cppCourse)

set(CMAKE_CXX_STANDARD 14)

add_executable(tehtava_1 tehtavat1/2_1.cpp)
add_executable(tehtava_2 tehtavat1/2_3.cpp)
add_executable(tehtava_3 tehtavat1/3_3.cpp)
add_executable(tehtava_4 tehtavat1/3_4.cpp)
add_executable(tehtava_5 tehtavat1/4_1.cpp)
add_executable(tehtava_6 tehtavat1/4_2.cpp)
add_executable(tehtava_7 tehtavat1/6_3.cpp)
add_executable(tunti_tehtava1_02 tunti_tehtavat2/tunti_tehtava1_02.cpp)
add_executable(tunti_tehtava2_02 tunti_tehtavat2/tunti_tehtava2_02.cpp)
add_executable(tunti_tehtava3_02 tunti_tehtavat2/tunti_tehtava3_02.cpp)
add_executable(tunti_tehtava4_02 tunti_tehtavat2/tunti_tehtava4_02.cpp)
add_executable(tunti_tehtava5_02 tunti_tehtavat2/tunti_tehtava5_02.cpp)
add_executable(tunti_tehtava6_02 tunti_tehtavat2/tunti_tehtava6_02.cpp)
add_executable(tehtava1_02 tehtavat2/tehtava1_02.cpp)
add_executable(tehtava2_02 tehtavat2/tehtava2_02.cpp)
add_executable(tehtava4_02 tehtavat2/tehtava4_02.cpp)
add_executable(tehtava5_02 tehtavat2/tehtava5_02.cpp)
add_executable(tehtava6_02 tehtavat2/tehtava6_02.cpp)
add_executable(tehtava1_04 tehtavat4/tehtava1_04.cpp)
add_executable(tehtava2_04 tehtavat4/tehtava2_04.cpp
        tehtavat4/tehtava2_04_b.cpp)
add_executable(tehtava4_04 tehtavat4/tehtava4_04.cpp)
add_executable(tehtava5_04 tehtavat4/tehtava5_04.cpp)
add_executable(tehtava6_04 tehtavat4/tehtava6_04.cpp)
add_executable(tehtava1_05 tehtavat5/tehtava1_05.cpp)
add_executable(tehtava2_05 tehtavat5/tehtava2_05.cpp)
add_executable(tehtava3_05 tehtavat5/tehtava3_05.cpp)
add_executable(tehtava4_05 tehtavat5/tehtava4_05.cpp)
add_executable(tehtava5_05 tehtavat5/tehtava5_05.cpp)
add_executable(tehtava6_05 tehtavat5/tehtava6_05.cpp)
add_executable(tehtava1_06 tehtavat6/tehtava1_06.cpp)
add_executable(tehtava2_06 tehtavat6/tehtava2_06.cpp)
add_executable(tehtava3_06 tehtavat6/tehtava3_06.cpp)
add_executable(tehtava4_06 tehtavat6/tehtava4_06.cpp)
add_executable(tehtava5_06 tehtavat6/tehtava5_06.cpp)
add_executable(tehtava6_06 tehtavat6/tehtava6_06.cpp)
add_executable(tehtava1_07 tehtavat7/tehtava1_07.cpp)
add_executable(tehtava2_07 tehtavat7/tehtava2_07.cpp)
add_executable(tehtava3_07 tehtavat7/tehtava3_07.cpp)
add_executable(tehtava4_07 tehtavat7/tehtava4_07.cpp)
add_executable(tehtava1_08 tehtavat8/tehtava1_08.cpp)
add_executable(tehtava2_08 tehtavat8/tehtava2_08.cpp)
add_executable(tehtava3_08 tehtavat8/tehtava3_08.cpp)
add_executable(tehtava5_08 tehtavat8/tehtava5_08.cpp)
add_executable(tehtava6_08 tehtavat8/tehtava6_08.cpp)
add_executable(tehtava1_09 tehtavat9/tehtava1_09.cpp
        tehtavat9/tehtava1_09.h)
add_executable(tehtava2_09 tehtavat9/tehtava2_09.cpp)
add_executable(tehtava3_09 tehtavat9/tehtava3_09.cpp)
